# deep-green

./: .gitignore
convection/: driver.f90  euler_cfd.f90  global.f90  initialization.f90  io.f90  meson.build  physics.f90
convection_rs/src/: init.rs  main.rs
src/cu/: eulernv.cu  meson.build
src/cu/include/: grid.hpp  kernels.h  physics.hpp
src/cu/ini_files/: ai.h  heat.h  khi.h  sod.h  trb.h
vis/: plot_convection.py  plot_convection_2.py
